# ai_book_converter

./: .gitignore  AGENTS.md  README.md  pdf_ocr.py  pyproject.toml  sitecustomize.py  test.py
spec/: design.md  requirements.md  tasks.md
src/ai_book_converter/: __init__.py  __main__.py  cli.py  config.py  errors.py  fixture_builder.py  job.py  json_types.py  models.py  ocr.py  pipeline.py  processing.py  renderer.py
tests/: __init__.py  conftest.py  test.py
tests/functional/: test_epub_output.py
tests/helpers/: fixtures.py
tests/unit/: test_epub_packager.py  test_job_state.py  test_ocr_client.py  test_pipeline_validation.py  test_processing.py
